// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JsonSchemaTypingsGenerator generates typings for a basic object schema 1`] = `
"// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface BasicConfig {
/**
 * The name of the item.
 */
name: string
/**
 * The number of items.
 */
count?: number
/**
 * Whether the feature is enabled.
 */
enabled?: boolean
}
"
`;

exports[`JsonSchemaTypingsGenerator injects x-tsdoc-release-tag into exported declarations 1`] = `
"// This file was generated by a tool. Modifying it will produce unexpected behavior

/**
 * @public
 */
export interface PublicConfig {
/**
 * A value.
 */
value?: string
}
"
`;

exports[`JsonSchemaTypingsGenerator resolves cross-file $ref between schema files: child output 1`] = `
"// This file was generated by a tool. Modifying it will produce unexpected behavior

/**
 * A reusable child type.
 */
export interface ChildType {
/**
 * The name of the child.
 */
childName: string
/**
 * The value of the child.
 */
childValue?: number
}
"
`;

exports[`JsonSchemaTypingsGenerator resolves cross-file $ref between schema files: parent output 1`] = `
"// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface ParentConfig {
/**
 * A label for the parent.
 */
label: string
child: ChildType
/**
 * A list of children.
 */
children?: ChildType[]
}
/**
 * A reusable child type.
 */
export interface ChildType {
/**
 * The name of the child.
 */
childName: string
/**
 * The value of the child.
 */
childValue?: number
}
"
`;

exports[`JsonSchemaTypingsGenerator strips the $schema property from generated typings 1`] = `
"// This file was generated by a tool. Modifying it will produce unexpected behavior

export interface ConfigWithSchemaField {
/**
 * The name.
 */
name?: string
}
"
`;
